--- a/Infatlan_Kanban/main.Master
+++ b/Infatlan_Kanban/main.Master
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.fw.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.fw.png">
     <title>Kanban Board | Infatlan</title>
     <link href="dist/css/style.min.css" rel="stylesheet">
 
@@ -127,7 +127,7 @@
                     <h3 class="menu-title">Tablero</h3>
                     <ul class="sidebar-menu">
                         <li runat="server" id="LiMiTablero" visible="true"><a href="../../pages/miTablero.aspx">Mi Tablero</a></li>
-                                                       
+                             
                     </ul>
             
                     <!-- Left navbar-header end -->
